# nemo_miller_columns

./: Makefile.in  README.md  aclocal.m4  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  gtk_nemo_columns
Debug/src/.deps/: gtk-nemo-columns.Po  main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  gtk-nemo-columns.c  gtk-nemo-columns.c~  gtk-nemo-columns.h  gtk-nemo-columns.h~  main.c
